# vidi

./: .gitignore  CHANGELOG.md  Cargo.toml  FIRST-PRINCIPLES.md  README.md  handover.md
.github/workflows/: publish-crates.yml  publish-tap.yml  release.yml
caesar-common/src/: error.rs
caesar-common/src/config/: file.rs  mod.rs
caesar-common/src/detector/: content.rs  magic.rs  mod.rs
caesar-common/src/theme/: builtin.rs  palette.rs  resolve.rs
contrib/yazi/vidi.yazi/: README.md
src/: lib.rs  main.rs
src/detector/: mod.rs
src/launcher/: media.rs  media_meta.rs  mod.rs
src/launcher/toggle/: compile.rs  event_loop.rs  mod.rs  render.rs
src/registry/: probe.rs  tools.rs
src/renderer/: html.rs
src/terminal/: detect.rs
veni/src/: config.rs  input.rs  lib.rs  ops.rs  pane.rs  ui.rs
veni/src/app/: mod.rs
vidi/: Cargo.toml  LICENSE
vidi/contrib/: install-deps.sh
vidi/contrib/homebrew/: vidi.rb
vidi/contrib/yazi/: keymap.toml
vidi/contrib/yazi/vidi.yazi/: init.lua
vidi/src/: error.rs  lib.rs  main.rs
vidi/src/config/: file.rs  mod.rs
vidi/src/detector/: content.rs  extension.rs  magic.rs  mod.rs
vidi/src/launcher/: args.rs  fullscreen.rs  inline.rs  internal.rs  mod.rs
vidi/src/launcher/toggle/: compile.rs  event_loop.rs  mod.rs
vidi/src/registry/: mod.rs  tools.rs  tools_data.rs  viewer_choice.rs
vidi/src/renderer/: epub.rs  image.rs  mod.rs
vidi/src/terminal/: mod.rs
vidi/src/theme/: mapper.rs  mod.rs  resolve.rs
vidi/tests/: internal_renderer.rs
